feat: Large버튼 컴퍼넌트 구현

--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -43,9 +43,9 @@ $primary-green-400: #48b590;
 $primary-green-500: #1aa274;
 $primary-green-600: #0c9566;
 
-$primary-green-400: #ffdca6;
-$primary-green-500: #ffa112;
-$primary-green-600: #ff8a00;
+$primary-orange-400: #ffdca6;
+$primary-orange-500: #ffa112;
+$primary-orange-600: #ff8a00;
 
 $primary-yellow-400: #fff2b7;
 $primary-yellow-500: #ffde1a;
