--- a/backend/Foody/src/main/resources/templates/index.html
+++ b/backend/Foody/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-
+  <h1>Spring boot!</h1>
+  <a href="/oauth2/authorization/google" class="btn" role="button">Google Login</a>
 </body>
 </html>
