refactor : LargeButton 컴퍼넌트 수정

--- a/frontend/foody/src/components/atom/LargeButton/LargeButton.scss
+++ b/frontend/foody/src/components/atom/LargeButton/LargeButton.scss
@@ -9,6 +9,12 @@
 	border-radius: 10px;
 }
 
+.img-size {
+	width: 15px;
+	height: 15px;
+	margin-right: 10px;
+}
+
 .green {
 	background-color: var.$primary-green-500;
 }
