refact : 토글 스위치 변경

--- a/frontend/foody/src/components/atom/ToggleSwitch/ToggleSwitch.scss
+++ b/frontend/foody/src/components/atom/ToggleSwitch/ToggleSwitch.scss
@@ -40,6 +40,7 @@
 	width: 115px; /* 크기 조정 */
 	height: 50px; /* 크기 조정 */
 	background-color: white;
+	font-size: var.$p1;
 	border-radius: 40px; /* 크기 조정 */
 	position: relative;
 	display: flex;
