--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -23,6 +23,7 @@ $drawer-inner: #f3eae3;
 $refrigerator: #e1e1e1;
 $refrigerator-door: #d9d9d9;
 $refrigerator-inner: #f7f7f7;
+$tabbar-bg: #f9f9f9;
 
 $black-100: #d3d3d3;
 $black-200: #a7a7a7;
