--- a/frontend/foody/src/components/organism/Tabbar/Tabbar.scss
+++ b/frontend/foody/src/components/organism/Tabbar/Tabbar.scss
@@ -4,10 +4,12 @@
 .tabbar-container {
 	position: fixed;
 	bottom: 0;
-	left: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	width: 100%;
+	max-width: 500px;
 	height: 60px;
-	background-color: var.$tabbar-bg;
+	background-color: transparent;
 
 	ul {
 		position: relative;
@@ -15,6 +17,28 @@
 		height: 100%;
 		padding: 0 10px;
 		@include f.flex(row, start, center);
+		background-image: url('../../../assets/images/tabbar-bg.png');
+		background-position: center;
+		background-size: contain;
+		background-repeat: no-repeat;
+
+		&::after,
+		&::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			z-index: -1;
+			width: 20%;
+			height: 100%;
+			display: block;
+			background-color: white;
+		}
+		&::after {
+			right: 0;
+		}
+		&::before {
+			left: 0;
+		}
 
 		li {
 			flex: 1;
@@ -26,31 +50,31 @@
 			top: 0;
 			left: 50%;
 			transform: translate(-50%, -40%);
-			border: 7px solid var.$white;
-			width: 80px;
-			height: 80px;
+			width: 60px;
+			height: 60px;
 			border-radius: 50px;
 			background-color: var.$primary-green-500;
+			box-shadow: 0px 2px 10px rgba(99, 99, 99, 0.4);
 
-			&::before,
-			&::after {
-				content: '';
-				position: absolute;
-				top: 37%;
-				width: 20px;
-				height: 30px;
-				background: transparent;
-			}
-			&::before {
-				left: -24px;
-				border-top-right-radius: 20px;
-				box-shadow: 2px -15px 0 0 var.$white;
-			}
-			&::after {
-				right: -24px;
-				border-top-left-radius: 20px;
-				box-shadow: -2px -15px 0 0 var.$white;
-			}
+			// &::before,
+			// &::after {
+			// 	content: '';
+			// 	position: absolute;
+			// 	top: 37%;
+			// 	width: 20px;
+			// 	height: 30px;
+			// 	background: transparent;
+			// }
+			// &::before {
+			// 	left: -24px;
+			// 	border-top-right-radius: 20px;
+			// 	box-shadow: 2px -15px 0 0 var.$white;
+			// }
+			// &::after {
+			// 	right: -24px;
+			// 	border-top-left-radius: 20px;
+			// 	box-shadow: -2px -15px 0 0 var.$white;
+			// }
 
 			.plus-icon {
 				color: var.$white;
