style: tabbar z-index 추가

--- a/frontend/foody/src/components/organism/Tabbar/Tabbar.scss
+++ b/frontend/foody/src/components/organism/Tabbar/Tabbar.scss
@@ -10,6 +10,7 @@
 	max-width: 500px;
 	height: 60px;
 	background-color: transparent;
+	z-index: var.$tabbar-z-index;
 
 	ul {
 		position: relative;
