refact:variable scss 폰트굵기 600 추가

--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -15,6 +15,7 @@ $fw-200: 200; // ExtraLight
 $fw-300: 300; // Light : default
 $fw-400: 400; // Regular
 $fw-500: 500; // Medium
+$fw-600: 600;
 
 // 색
 $white: #ffffff;
