--- a/frontend/foody/src/components/atom/TabbarItem/TabbarItem.scss
+++ b/frontend/foody/src/components/atom/TabbarItem/TabbarItem.scss
@@ -2,9 +2,14 @@
 @use 'styles/mixins/flex.scss' as f;
 
 .tabbar-item-container {
+	@include f.flex(column, center);
+	height: 100%;
+
 	a {
-		color: var.$black-400;
 		@include f.flex(column, center);
+		color: var.$black-400;
+		width: 100%;
+		height: 100%;
 
 		svg {
 			width: 20px;
