--- a/frontend/foody/src/components/molecule/CustomBottomSheet/CustomBottomSheet.scss
+++ b/frontend/foody/src/components/molecule/CustomBottomSheet/CustomBottomSheet.scss
@@ -3,15 +3,23 @@
 .custom-bottom-sheet-container {
 	position: relative;
 	z-index: 1100;
+}
 
-	.wrap {
-		background-color: red;
-		width: 100%;
-		height: 90%;
-		padding: 0 20px 75px;
-		position: absolute;
-		bottom: 0;
-		overflow: auto;
-		background-color: var.$white;
+.sheetcontent-container {
+	width: 100%;
+	height: 90%;
+	padding: 0 20px 75px;
+	position: absolute;
+	bottom: 0;
+	overflow: auto;
+	background-color: var.$white;
+	font-size: var.$p2;
+
+	// 스크롤 제거
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	&::-webkit-scrollbar {
+		display: none; /* Chrome, Safari, Opera*/
 	}
+	//
 }
