--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -39,6 +39,7 @@ $black-900: #070707;
 $danger: #ff4f4f;
 $danger-add: #ffb2b2;
 
+$primary-green-100: #e5fff6;
 $primary-green-200: #8dd7be;
 $primary-green-300: #76c7ac;
 $primary-green-400: #48b590;
