--- a/frontend/foody/src/components/molecule/IngredientsCategory/IngredientsCategory.scss
+++ b/frontend/foody/src/components/molecule/IngredientsCategory/IngredientsCategory.scss
@@ -6,13 +6,6 @@
 	overflow-x: scroll;
 	overflow-y: visible;
 	white-space: nowrap;
-	// 스크롤 제거
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
-	&::-webkit-scrollbar {
-		display: none; /* Chrome, Safari, Opera*/
-	}
-	//
 }
 
 .ingredients-category-container {
@@ -25,7 +18,7 @@
 	li,
 	button {
 		@include f.flex(column, center, center, 10px);
-		height: 100%;
+		height: 120px;
 	}
 
 	li {
@@ -42,12 +35,18 @@
 				// transform: scaleY(1);
 				transform: rotate(0);
 			}
+
+			button {
+				font-weight: bold;
+			}
 		}
 	}
 
 	button {
 		padding: 12px 4px 8px;
 		width: 120px;
+		height: 100%;
+
 		.desc-wrap {
 			@include f.flex(column, between);
 			gap: 4px;
