style: 재료 아이템 css 수정

--- a/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
+++ b/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
@@ -2,17 +2,19 @@
 @use 'styles/mixins/flex' as f;
 
 .ingredients-list-item-container {
+	@include f.flex;
 	height: 100%;
 	background-color: var.$white;
 	border-radius: 10px;
 
 	button {
 		height: 100%;
-		padding: 10px 18px;
+		padding: 14px;
 		@include f.flex(column, center, center, 10px);
 
 		img {
-			width: 70%;
+			max-width: 50px;
+			width: 10vw;
 		}
 		p {
 			font-size: var.$p3;
