feat: 재료 상세 정보 조회 구현(더미데이터)

--- a/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
+++ b/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
@@ -8,6 +8,7 @@
 	border-radius: 10px;
 
 	button {
+		width: 100%;
 		height: 100%;
 		padding: 14px;
 		@include f.flex(column, center, center, 10px);
