--- a/frontend/foody/src/components/organism/CustomTextAlert/CustomTextAlert.scss
+++ b/frontend/foody/src/components/organism/CustomTextAlert/CustomTextAlert.scss
@@ -14,6 +14,18 @@
 .popup-overlay {
 	@include f.flex(column, between, start);
 
+	.contents-group {
+		width: 100%;
+
+		.title-container {
+			@include f.flex(row, between, start);
+		}
+
+		svg {
+			color: var.$black-300;
+		}
+	}
+
 	margin: 0 auto;
 	max-width: 500px;
 	min-height: 160px;
