--- a/frontend/foody/src/components/atom/BannerSlider/BannerSlider.scss
+++ b/frontend/foody/src/components/atom/BannerSlider/BannerSlider.scss
@@ -1,6 +1,11 @@
+@use 'styles/base/variable.scss' as var;
+
 .banner-slider-container {
-	background-color: rgb(212, 212, 212);
-	width: 100%;
-	height: 100px;
+	background-color: transparent;
 	border-radius: 10px;
+
+	img {
+		width: 100%;
+		height: auto;
+	}
 }
