style: z-index 변수 선언 및 교체

--- a/frontend/foody/src/components/molecule/CustomBottomSheet/CustomBottomSheet.scss
+++ b/frontend/foody/src/components/molecule/CustomBottomSheet/CustomBottomSheet.scss
@@ -2,7 +2,7 @@
 
 .custom-bottom-sheet-container {
 	position: relative;
-	z-index: 1100;
+	z-index: var.$custom-bottom-sheet-container-z-index;
 }
 
 .sheetcontent-container {
