--- a/frontend/foody/src/components/organism/IngredientRegistOCR/IngredientRegistOCR.scss
+++ b/frontend/foody/src/components/organism/IngredientRegistOCR/IngredientRegistOCR.scss
@@ -4,7 +4,7 @@
 	position: relative;
 
 	.layout {
-		background-color: blue;
+		background-color: var.$black-500;
 	}
 
 	.btn-container {
@@ -14,6 +14,7 @@
 		left: 0;
 		bottom: 0;
 		background-color: var.$white;
+		z-index: var.$camera-btn-container-z-index;
 
 		button {
 			background-color: var.$primary-green-500;
