--- a/frontend/foody/src/components/atom/OCRCamera/OCRCamera.scss
+++ b/frontend/foody/src/components/atom/OCRCamera/OCRCamera.scss
@@ -1,6 +1,32 @@
-.camera {
-	video {
+@use 'styles/base/variable' as var;
+@use 'styles/mixins/flex' as f;
+
+.video-container {
+	.video {
+		width: 100%;
+		height: calc(100vh - 90px);
+		overflow: hidden;
+		text-align: center;
+	}
+}
+
+.canvas-container {
+	@include f.flex(column);
+	width: 100%;
+	height: 0;
+
+	.canvas {
 		width: 100%;
 		height: auto;
+		overflow: hidden;
+		text-align: center;
+	}
+
+	&.has-photo {
+		height: calc(100vh - 90px);
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: var.$has-photo-z-index;
 	}
 }
