--- a/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
+++ b/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
@@ -1,8 +1,25 @@
 @use 'styles/base/variable.scss' as var;
+@use 'styles/mixins/flex.scss' as f;
 
-.box {
-	height: 160px;
+.nutrient-main-box {
 	border: 1px solid var.$black-100;
+	border-radius: 10px;
+}
+
+.nutrient-sub-box {
+	@include f.flex(column, around, center, 10px);
+
+	p {
+		font-size: var.$p4;
+		font-weight: var.$fw-400;
+		color: var.$black-400;
+	}
+	.nutrient-little-box {
+		@include f.flex(column, start, start, 5px);
+		.nutrient {
+			@include f.flex(row, between, center, 0px);
+		}
+	}
 }
 
 .nutrient-of-day-title {
