feat:색깔 정보 업데이트

--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -54,6 +54,8 @@ $primary-yellow-400: #fff2b7;
 $primary-yellow-500: #ffde1a;
 $primary-yellow-600: #ffd600;
 
+$primary-blue: #0a70ba;
+
 $border-100: #f7f7f7;
 $border-200: #f0f0f0;
 $border-300: #e8e8e8;
