feat:식단 페이지 컴포넌트 업데이트

--- a/frontend/foody/src/components/organism/meal/MealTable/MealTable.scss
+++ b/frontend/foody/src/components/organism/meal/MealTable/MealTable.scss
@@ -1,5 +1,12 @@
 @use 'styles/base/variable.scss' as var;
+@use 'styles/mixins/flex.scss' as f;
 
 .meal-table {
 	display: flex;
+	flex-direction: column;
+	gap: 10px;
+
+	.meal-data {
+		@include f.flex(row, around, center);
+	}
 }
