--- a/frontend/foody/src/components/atom/ImgCount/ImgCount.scss
+++ b/frontend/foody/src/components/atom/ImgCount/ImgCount.scss
@@ -1,1 +1,12 @@
 @use 'styles/base/variable.scss' as var;
+@use 'styles/mixins/flex.scss' as f;
+
+.imgcount-box {
+	@include f.flex(row, center, center, 0px);
+
+	p {
+		font-size: var.$p1;
+		font-weight: var.$fw-400;
+		color: var.$primary-green-600;
+	}
+}
