style: 메인 페이지 버튼 아이콘 추가

--- a/frontend/foody/src/components/molecule/HomeShortcutButtons/HomeShortcutButtons.scss
+++ b/frontend/foody/src/components/molecule/HomeShortcutButtons/HomeShortcutButtons.scss
@@ -16,12 +16,25 @@
 		@include f.flex;
 		border: 1px solid var.$black-100;
 		border-radius: 10px;
+		padding: 20px;
 	}
 
 	.left {
-		@include f.flex(column, center, start);
+		@include f.flex(column, between, start);
 		grid-area: l;
-		padding: 20px;
+
+		.text-wrap {
+			width: 100%;
+			text-align: left;
+
+			h4 {
+				margin-bottom: 6px;
+			}
+		}
+
+		img {
+			width: 100%;
+		}
 
 		.desc {
 			font-size: var.$p2;
@@ -29,13 +42,21 @@
 		}
 	}
 
-	.right-top {
-		@include f.flex(row);
-		grid-area: rt;
-	}
-
+	.right-top,
 	.right-bottom {
-		@include f.flex(row);
+		img {
+			height: 40px;
+		}
+	}
+	.right-top {
+		@include f.flex(row, between);
+		grid-area: rt;
+		img {
+			height: 45px;
+		}
+	}
+	.right-bottom {
+		@include f.flex(row, between);
 		grid-area: rb;
 	}
 }
