--- a/frontend/foody/src/components/atom/BarChart/BarChart.scss
+++ b/frontend/foody/src/components/atom/BarChart/BarChart.scss
@@ -1,8 +1,8 @@
 @use 'styles/base/variable.scss' as var;
 
 .bar-box {
-	width: 280px;
-	height: 18.334px;
+	width: 100%;
+	// height: 18.334px;
 	border: 1px solid var.$black-100;
 	border-radius: 10px;
 }
