--- a/frontend/foody/src/components/atom/NutrientInfo/NutrientInfo.scss
+++ b/frontend/foody/src/components/atom/NutrientInfo/NutrientInfo.scss
@@ -2,7 +2,10 @@
 @use 'styles/mixins/flex.scss' as f;
 
 .small-box {
+	width: 65px;
 	@include f.flex(row, around, center, 0px);
+	flex-wrap: nowrap;
+
 	.nutrient-value {
 		font-weight: var.$fw-500;
 		font-size: var.$p2;
