--- a/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
+++ b/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
@@ -4,6 +4,7 @@
 .nutrient-main-box {
 	border: 1px solid var.$black-100;
 	border-radius: 10px;
+	padding: 15px;
 }
 
 .nutrient-sub-box {
@@ -15,9 +16,12 @@
 		color: var.$black-400;
 	}
 	.nutrient-little-box {
-		@include f.flex(column, start, start, 5px);
+		@include f.flex(column, start, start, 8px);
+		width: 100%;
+
 		.nutrient {
-			@include f.flex(row, between, center, 0px);
+			@include f.flex(row, between, center, 4px);
+			width: 100%;
 		}
 	}
 }
