style: 추가 버튼 넣고, 플로팅 메뉴에서 검색 제거

--- a/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
+++ b/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
@@ -13,6 +13,10 @@
 		padding: 14px;
 		@include f.flex(column, center, center, 10px);
 
+		svg {
+			color: var.$border-200;
+		}
+
 		img {
 			max-width: 50px;
 			width: 10vw;
