--- a/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
+++ b/frontend/foody/src/components/organism/meal/NutrientOfDay/NutrientOfDay.scss
@@ -1,33 +1,27 @@
 @use 'styles/base/variable.scss' as var;
 @use 'styles/mixins/flex.scss' as f;
 
+.nutirent-of-day-title-box {
+	@include f.flex(row, between, center, 0px);
+	padding-bottom: 20px;
+
+	.nutreint-of-day-title {
+		font-size: var.$h3;
+		font-weight: var.$fw-400;
+		color: var.$black-500;
+	}
+
+	.nutrient-of-day-button {
+		font-size: var.$p3;
+		font-weight: var.$fw-400;
+		color: var.$black-300;
+		@include f.flex(row, between, center, 2px);
+	}
+}
+
 .nutrient-main-box {
 	border: 1px solid var.$black-100;
 	border-radius: 10px;
 	padding: 15px;
-}
-
-.nutrient-sub-box {
 	@include f.flex(column, around, center, 10px);
-
-	p {
-		font-size: var.$p4;
-		font-weight: var.$fw-400;
-		color: var.$black-400;
-	}
-	.nutrient-little-box {
-		@include f.flex(column, start, start, 8px);
-		width: 100%;
-
-		.nutrient {
-			@include f.flex(row, between, center, 4px);
-			width: 100%;
-		}
-	}
-}
-
-.nutrient-of-day-title {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
 }
