--- a/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
+++ b/frontend/foody/src/components/atom/IngredientsListItem/IngredientsListItem.scss
@@ -9,6 +9,7 @@
 
 	button {
 		width: 100%;
+		min-height: 80px;
 		height: 100%;
 		padding: 14px;
 		@include f.flex(column, center, center, 10px);
@@ -23,6 +24,7 @@
 		}
 		p {
 			font-size: var.$p3;
+			margin-bottom: 2px;
 		}
 	}
 }
