--- a/frontend/foody/src/components/atom/OCRCamera/OCRCamera.scss
+++ b/frontend/foody/src/components/atom/OCRCamera/OCRCamera.scss
@@ -29,4 +29,23 @@
 		left: 0;
 		z-index: var.$has-photo-z-index;
 	}
+
+	.receipt-data-container {
+		position: absolute;
+		bottom: 100px;
+		left: 50%;
+		transform: translateX(-50%);
+		// background-color: red;
+
+		.receipt-data-list {
+			@include f.flex(row, center, center, 10px);
+
+			.receipt-data-item {
+				background-color: var.$primary-green-alpa-50;
+				color: var.$white;
+				padding: 8px 12px;
+				border-radius: 20px;
+			}
+		}
+	}
 }
