--- a/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
+++ b/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
@@ -7,9 +7,7 @@
 		margin-bottom: 10px;
 		padding: 0 10px;
 
-		a {
-			@include f.flex(row, center, center);
-			font-size: var.$p3;
+		button {
 			color: var.$black-300;
 		}
 	}
@@ -30,12 +28,12 @@
 			}
 
 			li {
-				max-width: 140px;
-				min-width: 120px;
+				min-width: 100px;
 
 				img {
-					width: 100%;
-					height: auto;
+					width: 100px;
+					height: 100px;
+					max-height: 100px;
 					object-fit: cover;
 					margin-bottom: 6px;
 					border-radius: 10px;
@@ -47,6 +45,33 @@
 					overflow: hidden;
 					text-overflow: ellipsis;
 					font-weight: 400;
+				}
+			}
+
+			.blank-item-container {
+				@include f.flex(column);
+				width: 100%;
+				max-width: 100%;
+				height: 100px;
+				border-radius: 10px;
+				border: 1px solid var.$border-200;
+
+				.blank-desc {
+					color: var.$black-200;
+					font-size: var.$p3;
+					font-weight: var.$fw-400;
+					margin-bottom: 10px;
+					text-align: center;
+					line-height: 1.5rem;
+				}
+
+				a {
+					color: var.$white;
+					font-size: var.$p1;
+					font-weight: var.$fw-400;
+					padding: 8px 10px;
+					background-color: var.$primary-green-500;
+					border-radius: 4px;
 				}
 			}
 		}
