--- a/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
+++ b/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
@@ -29,14 +29,19 @@
 
 			li {
 				min-width: 100px;
+				max-width: 100px;
 
-				img {
+				.img-wrap {
 					width: 100px;
 					height: 100px;
-					max-height: 100px;
-					object-fit: cover;
 					margin-bottom: 6px;
-					border-radius: 10px;
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						border-radius: 10px;
+					}
 				}
 
 				.title {
