--- a/frontend/foody/src/components/organism/SubHeader/SubHeader.scss
+++ b/frontend/foody/src/components/organism/SubHeader/SubHeader.scss
@@ -15,10 +15,15 @@
 	}
 
 	.sub-header-title {
+		width: 75%;
 		position: absolute;
 		left: 50%;
 		top: 50%;
 		transform: translate(-50%, -50%);
 		font-size: var.$h3;
+		text-align: center;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 }
