--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -84,6 +84,9 @@ $danger-alpa-40: rgba(255, 79, 79, 0.4);
 $danger-alpa-50: rgba(255, 79, 79, 0.5);
 $danger-alpa-60: rgba(255, 79, 79, 0.6);
 
+$primary-orange-alpa-30: rgba(255, 161, 18, 0.3);
+$primary-yellow-alpa-30: rgba(255, 222, 26, 0.3);
+
 // radius
 
 // margin
