--- a/frontend/foody/src/components/atom/HomeCalorieState/HomeCalorieState.scss
+++ b/frontend/foody/src/components/atom/HomeCalorieState/HomeCalorieState.scss
@@ -2,8 +2,48 @@
 @use 'styles/mixins/flex.scss' as f;
 
 .home-calorie-state-container {
-	@include f.flex(row, around, center);
+	@include f.flex(row, center, center, 20%);
 	border: 1px solid var.$black-100;
 	border-radius: 10px;
-	padding: 15px 0;
+	padding: 14px;
+
+	.doughnut-wrap {
+		width: 60px;
+		height: 60px;
+		position: relative;
+
+		.doughnut-percent {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+	}
+
+	.doughnut-desc {
+		text-align: center;
+
+		div {
+			color: var.$black-400;
+			font-size: var.$h4;
+
+			&:first-child {
+				margin-bottom: 4px;
+			}
+		}
+
+		.now {
+			font-size: var.$h2;
+			font-weight: var.$fw-500;
+		}
+
+		.goal {
+			color: var.$black-300;
+			font-size: var.$p3;
+		}
+	}
+
+	.point {
+		color: var.$primary-green-500;
+	}
 }
