hotfix: MealNutrientSimpleInfo css 수정

--- a/frontend/foody/src/components/molecule/MealNutrientSimpleInfo/MealNutrientSimpleInfo.scss
+++ b/frontend/foody/src/components/molecule/MealNutrientSimpleInfo/MealNutrientSimpleInfo.scss
@@ -17,5 +17,7 @@
 
 	.meal-nutrient-simple-info-content {
 		@include f.flex(column, center, center, 10px);
+		width: 100%;
+		padding: 0 30px;
 	}
 }
