--- a/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
+++ b/frontend/foody/src/components/molecule/RecommendList/RecommendList.scss
@@ -48,6 +48,7 @@
 					font-size: var.$p3;
 					white-space: nowrap;
 					overflow: hidden;
+					line-height: 1.2rem;
 					text-overflow: ellipsis;
 					font-weight: 400;
 				}
