--- a/frontend/foody/src/components/atom/FoodMBTIImage/FoodMBTIImage.scss
+++ b/frontend/foody/src/components/atom/FoodMBTIImage/FoodMBTIImage.scss
@@ -7,12 +7,14 @@
 		font-size: 2rem;
 		font-weight: 600;
 		text-align: center;
-		margin-bottom: 14px;
+		margin-bottom: 20px;
 	}
 
 	img {
 		width: 100%;
 		height: 350px;
 		object-fit: cover;
+		border-radius: 5px;
+		box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.15);
 	}
 }
