--- a/frontend/foody/src/components/molecule/DetailMealTable/DetailMealTable.scss
+++ b/frontend/foody/src/components/molecule/DetailMealTable/DetailMealTable.scss
@@ -1,1 +1,31 @@
 @use 'styles/base/variable.scss' as var;
+@use 'styles/mixins/flex.scss' as f;
+
+.detail-meal-table-container {
+	width: 100%;
+
+	.detail-meal-table-title {
+		font-size: var.$h3;
+		font-weight: var.$fw-400;
+		color: var.$black-600;
+		padding-top: 20px;
+	}
+	.detail-meal-table-contents {
+		width: 100%;
+
+		@include f.flex(column, center, center, 10px);
+
+		.detail-meal-table-box {
+			padding: 15px;
+			width: 100%;
+			border: 1px solid var.$black-200;
+			border-radius: 10px;
+			@include f.flex(row, start, center, 10px);
+			.detail-meal-table-text {
+				width: 100%;
+				height: 100%;
+				@include f.flex(column, start, start, 15px);
+			}
+		}
+	}
+}
