--- a/frontend/foody/src/components/organism/meal/MealDetailNutrient/MealDetailNutrient.scss
+++ b/frontend/foody/src/components/organism/meal/MealDetailNutrient/MealDetailNutrient.scss
@@ -6,14 +6,16 @@
 	font-size: var.$h3;
 	font-weight: var.$fw-500;
 	color: var.$black-500;
-	background-color: var.$primary-orange-400;
+	// background-color: var.$primary-orange-400;
 
 	.meal-detail-nutrient-value {
 		font-weight: var.$fw-400;
 		color: var.$primary-green-500;
+		padding: 10px 0px;
 	}
 
 	.meal-detail-nutrient-content {
+		width: 100%;
 		@include f.flex(column, center, center, 15px);
 	}
 }
