--- a/frontend/foody/src/components/organism/meal/MealSearch/MealSearch.scss
+++ b/frontend/foody/src/components/organism/meal/MealSearch/MealSearch.scss
@@ -1,17 +1,17 @@
 @use 'styles/base/variable' as var;
 
 .meal-regist-album-container {
-    h3 {
-        font-weight: var.$fw-600;
-        color: var.$primary-green-500;
-        margin-bottom: 10px;
-    }
+	h3 {
+		font-weight: var.$fw-600;
+		color: var.$primary-green-500;
+		margin-bottom: 10px;
+	}
 
-    .layout {
-        height: 100vh;
+	.layout {
+		height: calc(100vh - 160px);
 
-        .floating-layout {
-            bottom: 150px;
-        }
-    }
+		.floating-layout {
+			bottom: 0;
+		}
+	}
 }
