--- a/frontend/foody/src/components/organism/meal/MealSearch/MealSearch.scss
+++ b/frontend/foody/src/components/organism/meal/MealSearch/MealSearch.scss
@@ -1,6 +1,8 @@
 @use 'styles/base/variable' as var;
 
 .meal-regist-album-container {
+	height: 100vh;
+
 	h3 {
 		font-weight: var.$fw-600;
 		color: var.$primary-green-500;
@@ -8,7 +10,7 @@
 	}
 
 	.layout {
-		height: calc(100vh - 160px);
+		height: calc(100% - 160px);
 
 		.floating-layout {
 			bottom: 0;
