feat: 재료 직접 등록하기

--- a/frontend/foody/src/components/molecule/IngredientSearchResultList/IngredientSearchResultList.scss
+++ b/frontend/foody/src/components/molecule/IngredientSearchResultList/IngredientSearchResultList.scss
@@ -6,6 +6,8 @@
 
 	.ingredient-search-result-list {
 		@include f.flex(column, start, start, 10px);
+		max-height: calc(100vh - 420px);
+		overflow: scroll;
 
 		.ingredient-search-result-item {
 			width: 100%;
