--- a/frontend/foody/src/styles/base/_common.scss
+++ b/frontend/foody/src/styles/base/_common.scss
@@ -23,7 +23,7 @@ textarea {
 	font-family: 'S-CoreDream-3Light';
 	font-size: 10px;
 	color: var.$black-500;
-	line-height: 1;
+	line-height: normal;
 	font-feature-settings: 'tnum';
 	-webkit-tap-highlight-color: transparent; // 눌렀을 때 파란 배경 제거
 }
