--- a/frontend/foody/src/styles/base/_variable.scss
+++ b/frontend/foody/src/styles/base/_variable.scss
@@ -102,4 +102,6 @@ $custom-bottom-sheet-container-z-index: 1100;
 $loading-spinner-container-z-index: 2000;
 $receipt-list-conatiner-z-index: 2001;
 
+$my-menu-bg-z-index: 3000;
+$my-menu-z-index: 3001;
 $react-confirm-alert-overlay-z-index: 9999;
