--- a/frontend/foody/src/styles/mixins/flex.scss
+++ b/frontend/foody/src/styles/mixins/flex.scss
@@ -5,6 +5,7 @@ $FLEX_MAP: (
 	'end': flex-end,
 	'start': flex-start,
 	'stretch': stretch,
+	'normal': noraml,
 );
 
 @function _getFlexValue($key) {
