--- a/frontend/foody/src/components/molecule/RegistTodayMeal/RegistTodayMeal.scss
+++ b/frontend/foody/src/components/molecule/RegistTodayMeal/RegistTodayMeal.scss
@@ -1,3 +1,6 @@
+@use 'styles/base/variable.scss' as var;
+@use 'styles/mixins/flex.scss' as f;
+
 .regist-today-meal-tabbar-container {
 	transition: all 2s ease;
 	opacity: 0;
