--- a/frontend/foody/src/styles/base/_common.scss
+++ b/frontend/foody/src/styles/base/_common.scss
@@ -145,8 +145,15 @@ h4 {
 	}
 }
 
-body.no-scroll {
-	overflow: hidden;
+body {
+	&.no-scroll {
+		overflow: hidden;
+	}
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	&::-webkit-scrollbar {
+		display: none; /* Chrome, Safari, Opera*/
+	}
 }
 
 [data-rsbs-backdrop] {
