--- a/frontend/foody/src/components/molecule/CarlorieTable/CarlorieCheckTable.scss
+++ b/frontend/foody/src/components/molecule/CarlorieTable/CarlorieCheckTable.scss
@@ -5,8 +5,8 @@
 	@include f.flex(column, center, center, 20px);
 	border-radius: 10px;
 	border: 1px solid var.$black-100;
-	margin: 0 30px;
-	padding: 10px 30px;
+	width: 100%;
+	padding: 10px 20px;
 
 	.meal-calorie {
 		@include f.flex(column, center, normal, 10px);
