--- a/frontend/foody/src/components/molecule/NutrientInformation/NutrientInformation.scss
+++ b/frontend/foody/src/components/molecule/NutrientInformation/NutrientInformation.scss
@@ -2,13 +2,18 @@
 @use 'styles/mixins/flex.scss' as f;
 
 .nutrient-little-box {
-	@include f.flex(column, start, start, 8px);
+	@include f.flex(column, start, start, 4px);
 	width: 100%;
 
-	.nutrient-name {
-		font-size: var.$p4;
-		font-weight: var.$fw-400;
-		color: var.$black-400;
+	.nutrient-name-wrap {
+		width: 100%;
+		@include f.flex(row, between, center);
+
+		.nutrient-name {
+			font-size: var.$p3;
+			font-weight: var.$fw-400;
+			color: var.$black-400;
+		}
 	}
 
 	.nutrient {
