--- a/frontend/foody/src/components/molecule/RecipeNutrient/RecipeNutrient.scss
+++ b/frontend/foody/src/components/molecule/RecipeNutrient/RecipeNutrient.scss
@@ -10,4 +10,33 @@
 	.nutrient-wrap {
 		@include f.flex(column, center, center, 20px);
 	}
+
+	.nutrient-bar-desc-wrap {
+		font-size: var.$p4;
+		color: var.$black-300;
+
+		span {
+			padding-left: 10px;
+
+			&:first-child::before,
+			&:nth-child(2)::before,
+			&:last-child::before {
+				content: '';
+				display: inline-block;
+				width: 8px;
+				height: 8px;
+				margin-right: 2px;
+				border-radius: 10px;
+			}
+			&:first-child::before {
+				background-color: var.$primary-green-500;
+			}
+			&:nth-child(2)::before {
+				background-color: var.$primary-green-alpa-30;
+			}
+			&:last-child::before {
+				background-color: var.$danger;
+			}
+		}
+	}
 }
